--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.4.0",
     "gulp-pug": "^3.3.0",
+    "normalize.css": "^6.0.0",
     "postcss": "^5.2.17",
     "postcss-cssnext": "^2.10.0",
     "postcss-import": "^9.1.0",
+    "postcss-inline-svg": "^2.3.0",
+    "postcss-short": "^3.0.3",
+    "precss": "^1.4.0",
     "pug": "^2.0.0-beta.12"
   }
 }
