--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.4.0",
     "gulp-pug": "^3.3.0",
     "normalize.css": "^6.0.0",
