--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
+    "future-tabs": "^1.3.2",
     "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-file": "^0.3.0",
+    "gulp-image": "^2.8.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.4.0",
     "gulp-pug": "^3.3.0",
+    "lory.js": "^2.2.1",
     "normalize.css": "^6.0.0",
     "postcss": "^5.2.17",
     "postcss-cssnext": "^2.10.0",
