--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
-    "future-tabs": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-file": "^0.3.0",
@@ -25,6 +24,7 @@
     "postcss-inline-svg": "^2.3.0",
     "postcss-short": "^3.0.3",
     "precss": "^1.4.0",
-    "pug": "^2.0.0-beta.12"
+    "pug": "^2.0.0-beta.12",
+    "scrollreveal": "^3.3.4"
   }
 }
