--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.4.0",
     "gulp-pug": "^3.3.0",
-    "lory.js": "^2.2.1",
     "normalize.css": "^6.0.0",
     "postcss": "^5.2.17",
     "postcss-cssnext": "^2.10.0",
@@ -25,6 +24,7 @@
     "postcss-short": "^3.0.3",
     "precss": "^1.4.0",
     "pug": "^2.0.0-beta.12",
-    "scrollreveal": "^3.3.4"
+    "scrollreveal": "^3.3.4",
+    "siema": "^1.4.6"
   }
 }
