--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-favicons": "^2.2.7",
     "gulp-file": "^0.3.0",
     "gulp-image": "^2.8.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.4.0",
     "gulp-pug": "^3.3.0",
+    "gulp-real-favicon": "^0.2.2",
+    "gulp-uglify": "^2.1.2",
     "normalize.css": "^6.0.0",
     "postcss": "^5.2.17",
     "postcss-cssnext": "^2.10.0",
